# internal/api/api.go
@@ -146,10 +146,12 @@ func (s *Servidor) rutasDeLaAPI() []ruta {
 		{"/v1/provincial", s.buscarProvincial},
 		{"/v1/provincial/provincias", s.verProvincias},
 		{"/v1/provincial/tipos", s.verTiposProvinciales},
+		{"/v1/provincial/novedades", s.verNovedadesProvinciales},
 		{"/v1/provincial/{id}", s.verNormaProvincial},
 		{"/v1/nacional", s.buscarNacional},
 		{"/v1/nacional/tipos", s.verTiposNacionales},
 		{"/v1/nacional/{id}", s.verNormaNacional},
+		{"/v1/nacional/novedades", s.verNovedadesNacionales},
 		{"/v1/nacional/{id}/modificada-por", s.verModificadaPor},
 		{"/v1/nacional/{id}/modifica-a", s.verModificaA},
 		{"/v1/salud", s.verSalud},
